Bug 1556911 - Don't instantiate NetworkConnectivityService off-main-thread r=dragana

This patch calls NetworkConnectivityService::GetSingleton() on the main thread
and keeps a ref to the service until shutdown.
Even though calling ncs->GetIPv6() off-main-thread is technically a data-race
in practice that's OK because only the simple decision whether to send
AAAA requests is made based on that value, which in itself is an optimization.
I filed bug 1556967 for making the connectivity service thread safe.

Differential Revision: https://phabricator.services.mozilla.com/D33765